ipc/ipdl/test/ipdl/error/tooWeakSyncAsync.ipdl
protocol tooWeakSyncAsync {

    // it's an error to declare an async protocol with a sync message

parent:  sync Msg();

};
